--- a/main.html
+++ b/main.html
@@ -1,8 +1,8 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
-<head>
-</head>
-<body>
-  <h1>젤리 바보</h1>
-</body>
+  <head>
+  </head>
+  <body>
+    <h1>젤리 바보</h1>
+  </body>
 </html>
