--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
   </head>
-  <body>
-    <h1>젤리<br>바보</h1>
+  <body style="background-color:poderblue;">
+    <h1 style="text-align:center;">젤리</h1>
+    <p style="text-align:center;"><b>사랑해요</b></p>
   </body>
 </html>
